# da-band

./: .gitignore  404.html  README.md  buildServer.json  index.html  sitemap.xml
.github/workflows/: ci.yml  main.yml
.nvim/xcodebuild/: devices.json  report.json  settings.json
.nvim/xcodebuild/build.xcresult/: Info.plist
DA_BAND/DA_BAND/View/: NewGestureView.swift
DA_BAND/DA_BAND/models/: Math.swift
api/: .dockerignore  Dockerfile  compose.yml  environment.yml  index.html  main.py  pyproject.toml  start.sh
band/: index.html
docs/: README.md  index.html  mkdocs.yml
docs/assets/: architecture.excalidraw  da-band.excalidraw  db_schema.dbdiagram  user_flows.excalidraw
docs/docs/: api.md  band.md  docs.md  glossary.md  index.md  ios.md
glossary/: index.html
ios/: Instruction  cert.pem  index.html  key.pem
ios/.nvim/xcodebuild/: devices.json  report.json  settings.json
ios/DA_BAND/: IosApp.swift
ios/DA_BAND.xcodeproj/: project.pbxproj
ios/DA_BAND/View/: ContentView.swift
ios/DA_BAND/models/: BluetoothReceiver.swift  GestureProcessor.swift
ios/Tuist/: Package.swift
ios/bluetooth-test/bluetooth-test.xcodeproj/: project.pbxproj
ios/da-band/: Constants.swift  ContentView.swift  Item.swift  MockData.swift  da_bandApp.swift
ios/da-band.xcodeproj/: project.pbxproj
ios/da-bandTests/: da_bandTests.swift
ios/da-bandUITests/: da_bandUITests.swift  da_bandUITestsLaunchTests.swift
mysite/: db.sqlite3
mysite/ml_model/: urls.py  views.py
mysite/mysite/: settings.py  urls.py
notebooks/: da-band-model.ipynb
search/: search_index.json
(+77 files in other folders)
